# 2DMultiplayerGameScorsazza

./: CMakeLists.txt
Data/Map/: Map.tmx  tilemap.tsx
src/: Client.cpp  Client.h  Game.cpp  Game.h  Player.cpp  Player.h  Server.cpp  Server.h  Tile.cpp  Tile.h  main.cpp  tinyxml2.cpp  tinyxml2.h
